# sblim-cmpi-syslog

./: Makefile  README.md  sblim-cmpi-syslog.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  sblim-cmpi-syslog.rh.spec  sblim-cmpi-syslog.rh.spec.in  sblim-cmpi-syslog.spec  sblim-cmpi-syslog.spec.in
src/syslog-conf/: Makefile.am  Makefile.in  README  Syslog_ConfUtils.c  Syslog_ConfUtils.h  Syslog_Configuration.c  Syslog_Setting.c  Syslog_SettingContext.c  provider-register.sh
src/syslog-conf/mof/: Syslog_Configuration.mof  Syslog_Configuration.registration  Syslog_ConfigurationRegistration.mof
src/syslog-conf/mof/CVS/: Entries  Repository  Root
src/syslog-conf/test/: readme.test-syslog-conf  runtest_pegasus.sh  runtest_wbemcli.sh  test-cmpi-syslog-conf.sh
src/syslog-conf/test/CVS/: Entries  Repository
src/syslog-conf/test/cim/: Syslog_Configuration.cim  Syslog_Setting.cim  Syslog_SettingContext.cim
src/syslog-conf/test/cim/CVS/: Entries  Repository
src/syslog-conf/test/system/CVS/: Repository
src/syslog-conf/test/system/linux/: Syslog_Configuration.system  Syslog_Setting.system  Syslog_SettingContext.system  setting  setting.c
src/syslog-conf/test/system/linux/CVS/: Entries  Repository
src/syslog-conf/util/: syslogconfutil.c  syslogconfutil.h  syslogsettingparse.c
src/syslog-log/: Makefile.am  Makefile.in  README  Syslog_LogRecord.c  Syslog_LogUtils.c  Syslog_LogUtils.h  Syslog_MessageLog.c  Syslog_RecordInLog.c
src/syslog-log/mof/: Syslog_Log.mof  Syslog_Log.registration  Syslog_LogRegistration.mof
src/syslog-log/mof/CVS/: Entries  Repository
src/syslog-log/test/: readme  runtest_pegasus.sh  runtest_wbemcli.sh  test-cmpi-syslog-log.sh
src/syslog-log/test/CVS/: Entries  Repository  Root
src/syslog-log/test/cim/: Syslog_LogRecord.cim  Syslog_MessageLog.cim  Syslog_RecordInLog.cim
src/syslog-log/test/cim/CVS/: Entries  Repository
src/syslog-log/test/system/CVS/: Repository
src/syslog-log/test/system/linux/: Syslog_LogRecord.system  Syslog_MessageLog.pl  Syslog_MessageLog.system  Syslog_RecordInLog.system  logrecord.sh  messagelog.sh  msglogtest.sh
src/syslog-log/test/system/linux/CVS/: Entries  Repository
src/syslog-log/util/: sysloglogutil.c  sysloglogutil.h  syslogtimeparse.c
src/syslog-service/: Makefile.am  Makefile.in  README  Syslog_Service.c  Syslog_ServiceProcess.c  Syslog_ServiceUtils.c  Syslog_ServiceUtils.h  provider-register.sh
src/syslog-service/mof/: Syslog_Service.mof  Syslog_Service.registration  Syslog_ServiceRegistration.mof
src/syslog-service/mof/CVS/: Entries  Repository
src/syslog-service/test/: readme  runtest_pegasus.sh  runtest_wbemcli.sh  test-cmpi-syslog-service.sh
src/syslog-service/test/CVS/: Entries  Repository
src/syslog-service/test/cim/: Syslog_Service.cim
src/syslog-service/test/cim/CVS/: Entries  Repository
src/syslog-service/test/system/CVS/: Repository
src/syslog-service/test/system/linux/: Syslog_Service.system
src/syslog-service/test/system/linux/CVS/: Entries  Repository
src/syslog-service/util/: syslog-service.sh  syslogserviceutil.c  syslogserviceutil.h
